--- a/index.html
+++ b/index.html
@@ -2,6 +2,72 @@
 <html><head>
 <meta charset="UTF-8"> 
 <!--<link rel="stylesheet" type="text/css" href="ralju.css">-->
+<style>
+body {
+  max-width: 900px;
+  margin: 0px auto;
+}
+</style>
 <title>melopee.github.io/index.html</title>
 </head><body>
+
+<h2 id="english-">english:</h2>
+<p>Welcome to la melop&#39;s page. Can be found here:</p>
+<ul>
+<li>translations</li>
+<li><ul>
+<li><a href="boxyfanva/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte.html">a tale of six trillion year and a night</a></li>
+<li><a href="boxyfanva/jb_dikca_angeli.html">electric angel</a></li>
+</ul>
+</li>
+<li><p>music sheets</p>
+</li>
+<li><ul>
+<li><a href="zgiple/lisri_zahai_xa_terto_nanca_je_pa_nicte%2C_pipno_je_sanga-jazzermazzer99_x_melop-4boxvo.mscz">a tale of six trillion year and a night, with lojban lyrics</a></li>
+</ul>
+</li>
+<li><p>some articles</p>
+</li>
+<li><ul>
+<li><a href="papri/melopee-quotations_and_names_an%20attempt.md">an attempt to fix quotations and names</a></li>
+</ul>
+</li>
+</ul>
+<hr>
+<p>For any remarks, questions, comments, ask to <code>melopee7 at gmail dot com</code></p>
+<br>
+<br>
+<hr>
+<hr>
+<br>
+<br>
+<h2 id="-i-jo-au-la-lojban">jo&#39;au la lojban</h2>
+<p>.i fi&#39;i lo melop kibypapri .i lo fe&#39;e ca facki zo&#39;u tu&#39;e</p>
+<ul>
+<li>jo&#39;i lo fanva</li>
+<li><ul>
+<li><a href="boxyfanva/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte.html">la lisri za&#39;ai xa terto nanca je pa nicte</a></li>
+</ul>
+</li>
+<li><ul>
+<li>ce <a href="boxyfanva/jb_dikca_angeli.html">la dikca angeli</a></li>
+</ul>
+</li>
+<li><p>jo&#39;i pi&#39;a lo zgike boxfo</p>
+</li>
+<li><ul>
+<li><a href="zgiple/lisri_zahai_xa_terto_nanca_je_pa_nicte%2C_pipno_je_sanga-jazzermazzer99_x_melop-4boxvo.mscz">la lisri za&#39;ai xa terto nanca je pa nicte to seka&#39;ai lo lojban sagypemci toi</a></li>
+</ul>
+</li>
+<li><p>jo&#39;i pi&#39;a lo papri</p>
+</li>
+<li><ul>
+<li><a href="papri/melopee-quotations_and_names_an%20attempt.md">lo troci be lo ka cikre lo se sitsku je lo cmene</a></li>
+</ul>
+</li>
+</ul>
+<hr>
+<p>tu&#39;e tu&#39;u .i se piksku jo&#39;u se retsku fi la melop la&#39;o <code>melopee7 at gmail dot com</code></p>
+
+  
 </body></html>
