--- a/boxyfanva/jb_dikca_angeli.html
+++ b/boxyfanva/jb_dikca_angeli.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<body><html>
-.i ti goi ko'a xe fanva la dikca angeli ku la lojban lo glico jo'u ponjo la melop<br>
-.i zukte lo du'u lu tai lo kantu brife ku lo mense'i be mi cu desku li'u claxu zo .i kei ku lo smuni to'e klina ku sa'uku'inai seni'i lo su'u to'e genra kei ku<br>
-.i se piksku jo'u se retsku fi la melop la'o melopee7 at gmail dot com<br>
-<br>
-<br>
+<!DOCTYPE html><html><head>
+<meta charset="UTF-8">
+<title></title>
+</head><body>
 <table style="width:100%">
-<tbody><tr>
-<td><i><b>日本語</b></i>
-</td><td><i><b>ローマ字</b></i>
-</td><td><i><b>English translation from Project DIVA F 2nd</b></i>
-</td><td><i><b>ko'a</b></i>
-</td></tr>
+<tbody>
 <tr>
 <td><i><b>えれくとりっく・えんじぇぅ</b></i>
 </td><td><i><b>erekutorikku enjeu</b></i>
@@ -231,6 +222,14 @@
 </td><td>watashi no kokoro, yusaburu no
 </td><td>My heart trembles
 </td><td>lo mense'i be mi cu desku
-</td></tr></tbody></table>
+</td></tr>
+<tr>
+<td><i><b>日本語</b></i>
+</td><td><i><b>Romaji</b></i>
+</td><td><i><b>English translation from Project DIVA F2nd</b></i>
+</td><td><i><b>fanva fa la melop fi lo jbobau fo lo ponbau jo'u lo glibau</b></i>
+</td></tr>
+</tbody></table>
+<p>.i zukte lo du'u lu tai lo kantu brife ku lo mense'i be mi cu desku li'u claxu zo .i kei ku lo smuni to'e klina ku sa'uku'inai seni'i lo su'u to'e genra kei ku</p>
 
 </body></html>
