--- a/boxyfanva/jb_glide.html
+++ b/boxyfanva/jb_glide.html
@@ -210,9 +210,9 @@
 </tr>
 <tr>
 <td><i><b>日本語</b></i>
-</td><td><i><b>ロマー字</b></i>
-</td><td><i><b>English Translation by zcatcracker</b></i>
-</td><td><i><b>jbobau</i></b>
+</td><td><i><b>Romaji</b></i>
+</td><td><i><b><a href="http://vocaloidlyrics.wikia.com/wiki/%E3%82%B0%E3%83%A9%E3%82%A4%E3%83%89_(Glide)">English</a></b></i>
+</td><td><i><b>fanva fa la melop fi lo jbobau fo lo ponbau jo'u lo glibau</b></i>
 </td><td>
 </td></tr>
 </table>
