--- a/boxyfanva/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte.html
+++ b/boxyfanva/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<body><html>
+<!DOCTYPE html><html><head>
+<meta charset="UTF-8">
+<title></title>
+</head><body>
+
 <table style="width:100%">
-<tbody><tr>
-<td><i><b>日本語</b></i>
-</td><td><i><b>ローマ字</b></i>
-</td><td><i><b>English (translation by vgperson, updated by ElectricRaichu)</b></i>
-</td><td><i><b>ko'a</b></i>
-</td></tr>
+<tbody>
 <tr>
 <td><i><b>六兆年と一夜物語</b></i>
 </td><td><i><b>rokuchou nen to ichiya monogatari</b></i>
@@ -394,17 +391,15 @@
 </td><td>yuuyake no naka ni suikomarete kietetta
 </td><td>Was sucked up into the sunset, and vanished into the air ...
 </td><td>cu se cokcu lo flecu sruri solmro ju'e cu co'i canci
-</td></tr></tbody></table>
+</td></tr>
+<tr>
+<td><i><b>日本語</b></i>
+</td><td><i><b>Romaji</b></i>
+</td><td><i><b><a href="http://vocaloidlyrics.wikia.com/wiki/%E5%85%AD%E5%85%86%E5%B9%B4%E3%81%A8%E4%B8%80%E5%A4%9C%E7%89%A9%E8%AA%9E_(Roku-chou_Nen_to_Ichiya_Monogatari)">English</a></b></i>
+</td><td><i><b>fanva fa la melop fi lo jbobau fo lo ponbau jo'u lo glibau</b></i>
+</td></tr>
+</tbody></table>
 <p>
-.i jo'au la lojban<br>
-.i ti goi ko'a xe fanva la .lisri za'ai xa terto nanca je pa nicte. la lojban lo glico jo'u ponjo la melop<br>
 .i ko'a se fanva cu kurji se fanva mu'i lo du'u mapti lo sanga rilti<br>
-.i se piksku jo'u se retsku fo la'o melopee7@gmail.com
-</p>
-<p>
-English:<br>
-This is a translation of 'a tale of six trillion years and a night', translated from Japanese and English by melop
-It's arranged to fit to the song rythme<br>
-For any remarks or questions, ask to melopee7[at]gmail[dot]com
 </p>
 </body></html>
