--- a/boxyfanva/jb_tinci_palta_dansu.html
+++ b/boxyfanva/jb_tinci_palta_dansu.html
@@ -2,8 +2,6 @@
 <meta charset="UTF-8">
 <title></title>
 </head><body>
-
-
 <style media="screen">
 td, th {
 border-left: solid 1px black;
@@ -609,11 +607,12 @@ border-left: solid 1px black;
 </td><td>.i jbera lo do xance doi tin palta dansu
 </td><td></td></tr>
 <tr>
-<td><i><b>Japanese</b></i>
+<td><i><b>日本語</b></i>
 </td><td><i><b>Romaji</b></i>
-</td><td><i><b>English Translation by Coleena Wu</b></i>
-</td><td><i><b>se fanva la melop fi lo jbobau fo lo glico joi lo ponba joi jabo jo'u lo glibau</b></i>
-</td><td></td></tr>
+</td><td><i><b><a href="http://vocaloidlyrics.wikia.com/wiki/%E3%83%96%E3%83%AA%E3%82%AD%E3%83%8E%E3%83%80%E3%83%B3%E3%82%B9_(Buriki_no_Dance)">English</a></b></i>
+</td><td><i><b>fanva fa la melop fi lo jbobau fo lo ponbau jo'u lo glibau</b></i>
+</td><td><i><b>lujvo morna</b></i>
+</td></tr>
 </table>
 </div>
 </body></html>
