--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>melopee.github.io/index.html</title>
 </head><body>
 
+<br><br><hr><hr>
 <div class="bangu">
   <h2>English</h2>
   <p>Welcome to melopee's page. Can be found here:</p>
@@ -17,6 +18,7 @@
     <li class="xadni"><a href="boxyfanva/jb_dikca_angeli.html">Electric Angel</a></li>
     <li class="xadni"><a href="boxyfanva/jb_glide.html">Glide</a></li>
     <li class="xadni"><a href="boxyfanva/jb_tinci_palta_dansu.html">Tin Palte Dance</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_vefnu_sindoromu.html">Revenge Syndrome</a></li>
     </ul>
   </li>
   <li><h3>some music sheets</h3>
@@ -27,6 +29,7 @@
   <li><h3>some opinions</h3>
     <ul>
     <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">an attempt to fix quotations and names</a></li>
+    <li class="xadni"><a href="https://www.reddit.com/r/lojban/comments/64f2wb/stidi_lo_vokske_valsi_proposal_for_phonetic_valsi/">A proposition for phonetic valsi</a></li>
     </ul>
   </li>
   </ul>
@@ -45,6 +48,7 @@
     <li class="xadni"><a href="boxyfanva/jb_dikca_angeli.html">dikca angeli</a></li>
     <li class="xadni"><a href="boxyfanva/jb_glide.html">glide</a></li>
     <li class="xadni"><a href="boxyfanva/jb_tinci_palta_dansu.html">tinci palta dansu</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_vefnu_sindoromu.html">vefnu sindoromu</a></li>
     </ul>
   </li>
   <li><h3>jo'i pi'a lo zgiple</h3>
@@ -55,6 +59,7 @@
   <li><h3>jo'i pi'a lo selji'i</h3>
     <ul>
     <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">lo troci be lo ka cikre lo se sitsku je lo cmene</a></li>
+    <li class="xadni"><a href="https://www.reddit.com/r/lojban/comments/64f2wb/stidi_lo_vokske_valsi_proposal_for_phonetic_valsi/">lo voi stidi lo vokske valsi</a></li>
     </ul>
   </li>
   </ul>
@@ -73,6 +78,7 @@
     <li class="xadni"><a href="boxyfanva/jb_dikca_angeli.html">Electric Angel</a></li>
     <li class="xadni"><a href="boxyfanva/jb_glide.html">Glide</a></li>
     <li class="xadni"><a href="boxyfanva/jb_tinci_palta_dansu.html">Tin Palte Dance</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_vefnu_sindoromu.html">Le syndrome de la revanche</a></li>
     </ul>
   </li>
   <li><h3>des partitions</h3>
@@ -83,6 +89,7 @@
   <li><h3>des opinions</h3>
     <ul>
     <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">an attempt to fix quotations and names</a></li>
+    <li class="xadni"><a href="https://www.reddit.com/r/lojban/comments/64f2wb/stidi_lo_vokske_valsi_proposal_for_phonetic_valsi/">Une proposition pour les valsi phonétiques</a></li>
     </ul>
   </li>
   </ul>
@@ -90,6 +97,4 @@
   <p>Pour une quelconque remarque, question, commentaire,, demander à <code>melopee7 arobase gmail point com</code></p>
   <br><br><hr><hr><br><br>
 </div>
-
-
 </body></html>
