--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <meta charset="UTF-8"> 
 <link rel="stylesheet" type="text/css" href="vistai/ralju.css">
 <style>
+h2 {
+  display: inline;
+}
 </style>
 <title>melopee.github.io/index.html</title>
 </head><body>
-
-<br><br><hr><hr>
 <div class="bangu">
-  <h2>English</h2>
-  <p>Welcome to melopee's page. Can be found here:</p>
+  <p><span class="toi">English&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Welcome to melopee's page. Can be found here:</p>
   <ul>
   <li><h3>some translations to lojban</h3>
     <ul>
@@ -19,58 +19,66 @@
     <li class="xadni"><a href="boxyfanva/jb_glide.html">Glide</a></li>
     <li class="xadni"><a href="boxyfanva/jb_tinci_palta_dansu.html">Tin Palte Dance</a></li>
     <li class="xadni"><a href="boxyfanva/jb_vefnu_sindoromu.html">Revenge Syndrome</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_wave.html">Wave</a></li>
     </ul>
   </li>
   <li><h3>some music sheets</h3>
     <ul>
-    <li class="xadni"><a href="zgiple/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte,_pipno_je_sanga-jazzermazzer99_x_melop-4boxvo.mscz">a tale of six trillion year and a night, with lojban lyrics</a></li>
+    <li class="xadni"><a href="zgiple/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte,_pipno_je_sanga-jazzermazzer99_x_melop-4boxvo.mscz">A tale of six trillion year and a night, with lojban lyrics</a></li>
+    <li class="xadni"><a href="zgiple/wave,_lyrics_jb_x_piano.mscz">Wave, with lojban lyrics <span class="toi">⦅caution, it's an old arrangment, see the previous section to have a better translation⦆</span></a></li>
+    <li class="xadni"><a href="zgiple/wave,_lyrics_jp_x_piano.mscz">Wave, with romaji lyrics</a></li>
     </ul>
   </li>
   <li><h3>some opinions</h3>
     <ul>
-    <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">an attempt to fix quotations and names</a></li>
+    <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">An attempt to fix lojban's quotations and names</a></li>
     <li class="xadni"><a href="https://www.reddit.com/r/lojban/comments/64f2wb/stidi_lo_vokske_valsi_proposal_for_phonetic_valsi/">A proposition for phonetic valsi</a></li>
+    <li class="xadni"><a href="degvelsku.html">Degvelsku, a finger-talk transcription of latin alphabet</a></li>
     </ul>
   </li>
   </ul>
-  <br><br><br><br>
-  <p>For any remarks, questions, comments, ask to <code>melopee7 at gmail dot com</code></p>
-  <br><br><hr><hr><br><br>
+  <br><br>
+  <p class="toi">For any remarks, questions, comments, ask to <code>melopee7 at gmail dot com</code></p>
 </div>
-<br>
+
+<hr>
+
 <div class="bangu">
-  <h2>jo'au la jbobau</h2>
-  <p>.i fi'i la .melop. kibypapri .i lo fe'e ca facki zo'u tu'e</p>
+  <p><span class="toi">jo'au la jbobau&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> .i fi'i la .melop. kibypapri .i lo fe'e ca facki zo'u tu'e</p>
   <ul>
-  <li><h3>jo'i lo fanva be fi lo jbobau</h3>
+  <li><h3 class="sriler">jo'i pi'a lo fanva be fi lo jbobau</h3>
     <ul>
     <li class="xadni"><a href="boxyfanva/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte.html">lisri za'ai xa terto nanca je pa nicte</a></li>
     <li class="xadni"><a href="boxyfanva/jb_dikca_angeli.html">dikca angeli</a></li>
     <li class="xadni"><a href="boxyfanva/jb_glide.html">glide</a></li>
     <li class="xadni"><a href="boxyfanva/jb_tinci_palta_dansu.html">tinci palta dansu</a></li>
     <li class="xadni"><a href="boxyfanva/jb_vefnu_sindoromu.html">vefnu sindoromu</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_wave.html">wave</a></li>
     </ul>
   </li>
-  <li><h3>jo'i pi'a lo zgiple</h3>
+  <li><h3 class="sriler">jo'i pi'a lo zgiple</h3>
     <ul>
     <li class="xadni"><a href="zgiple/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte,_pipno_je_sanga-jazzermazzer99_x_melop-4boxvo.mscz">la lisri za'ai xa terto nanca je pa nicte to seka'ai lo lojban sagypemci toi</a></li>
+    <li class="xadni"><a href="zgiple/wave,_lyrics_jb_x_piano.mscz">Wave, noi kansa lo sagypemci bau lo jbobau <span class="toi">⦅to o'i ti laldo nunmapti .i viska lo li'erpau mu'i lo xauzma fanva toi⦆</span></a></li>
+    <li class="xadni"><a href="zgiple/wave,_lyrics_jp_x_piano.mscz">Wave, noi kansa lo sagypemci bau la .romaji.</a></li>
     </ul>
   </li>
-  <li><h3>jo'i pi'a lo selji'i</h3>
+  <li><h3 class="sriler">jo'i pi'a lo selji'i</h3>
     <ul>
-    <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">lo troci be lo ka cikre lo se sitsku je lo cmene</a></li>
+    <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">lo troci be lo ka cikre lo se sitsku je lo jbobau vu'o poi cmene</a></li>
     <li class="xadni"><a href="https://www.reddit.com/r/lojban/comments/64f2wb/stidi_lo_vokske_valsi_proposal_for_phonetic_valsi/">lo voi stidi lo vokske valsi</a></li>
+    <li class="xadni"><a href="degvelsku.html">la .degvelsku. noi fanva morna lo xanta'a be fo lo latmo selyle'u</a></li>
     </ul>
   </li>
   </ul>
-  <br><br><br><br>
-  <p>tu'e tu'u .i se piksku jo'u se retsku fi la melop la'o <code>melopee7 fe'ecabu gmail denpabu com</code></p>
-  <br><br><hr><hr><br><br>
+  <br><br>
+  <p class="toi">tu'e tu'u .i se piksku jo'u se retsku fi la melop la'o <code>melopee7 fe'ecabu gmail denpabu com</code></p>
 </div>
-<br>
+
+<hr>
+
 <div class="bangu">
-  <h2>Français</h2>
-  <p>Bienvenue sur la page de mélopée. Peuvent être ici trouvés</p>
+  <p><span class="toi">Français&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Bienvenue sur la page de mélopée. Peuvent être ici trouvés</p>
   <ul>
   <li><h3>des traductions vers le lojban</h3>
     <ul>
@@ -79,22 +87,25 @@
     <li class="xadni"><a href="boxyfanva/jb_glide.html">Glide</a></li>
     <li class="xadni"><a href="boxyfanva/jb_tinci_palta_dansu.html">Tin Palte Dance</a></li>
     <li class="xadni"><a href="boxyfanva/jb_vefnu_sindoromu.html">Le syndrome de la revanche</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_wave.html">Wave</a></li>
     </ul>
   </li>
   <li><h3>des partitions</h3>
     <ul>
     <li class="xadni"><a href="zgiple/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte,_pipno_je_sanga-jazzermazzer99_x_melop-4boxvo.mscz">Un histoire de six billions d'années et une nuit, paroles en lojban</a></li>
+    <li class="xadni"><a href="zgiple/wave,_lyrics_jb_x_piano.mscz">Wave, avec des paroles en lojban <span class="toi">⦅note, c'est un vieux arrangement, voyer la section précédente pour une meilleur traduction⦆</span></a></li>
+    <li class="xadni"><a href="zgiple/wave,_lyrics_jp_x_piano.mscz">Wave, avec les paroles en romaji</a></li>
     </ul>
   </li>
   <li><h3>des opinions</h3>
     <ul>
-    <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">an attempt to fix quotations and names</a></li>
+    <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">Une tentative d'améliorations de noms et citations lojbaniques</a></li>
     <li class="xadni"><a href="https://www.reddit.com/r/lojban/comments/64f2wb/stidi_lo_vokske_valsi_proposal_for_phonetic_valsi/">Une proposition pour les valsi phonétiques</a></li>
+    <li class="xadni"><a href="degvelsku.html">Degvelsku, une transcription tactile de l'alphabet latin</a></li>
     </ul>
   </li>
   </ul>
-  <br><br><br><br>
-  <p>Pour une quelconque remarque, question, commentaire,, demander à <code>melopee7 arobase gmail point com</code></p>
-  <br><br><hr><hr><br><br>
+  <br><br>
+  <p class="toi">Pour une quelconque remarque, question, commentaire,, demander à <code>melopee7 arobase gmail point com</code></p>
 </div>
 </body></html>
