cimoi cnino fanva

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ h2 {
     <li class="xadni"><a href="boxyfanva/jb_tinci_palta_dansu.html">Tin Palte Dance</a></li>
     <li class="xadni"><a href="boxyfanva/jb_vefnu_sindoromu.html">Revenge Syndrome</a></li>
     <li class="xadni"><a href="boxyfanva/jb_wave.html">Wave</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_ai_na_djuno.html">I don't wanna know</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_jinsa_xalnifa.html">Clean Freak</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_na_klama.html">Ikanaide</a></li>
     </ul>
   </li>
   <li><h3>some music sheets</h3>
@@ -54,6 +57,9 @@ h2 {
     <li class="xadni"><a href="boxyfanva/jb_tinci_palta_dansu.html">tinci palta dansu</a></li>
     <li class="xadni"><a href="boxyfanva/jb_vefnu_sindoromu.html">vefnu sindoromu</a></li>
     <li class="xadni"><a href="boxyfanva/jb_wave.html">wave</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_ai_na_djuno.html">ai na djuno</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_jinsa_xalnifa.html">jinsa xalnifa</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_na_klama.html">na klama</a></li>
     </ul>
   </li>
   <li><h3 class="sriler">jo'i pi'a lo zgiple</h3>
@@ -88,6 +94,9 @@ h2 {
     <li class="xadni"><a href="boxyfanva/jb_tinci_palta_dansu.html">Tin Palte Dance</a></li>
     <li class="xadni"><a href="boxyfanva/jb_vefnu_sindoromu.html">Le syndrome de la revanche</a></li>
     <li class="xadni"><a href="boxyfanva/jb_wave.html">Wave</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_ai_na_djuno.html">I don't wanna know</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_jinsa_xalnifa.html">Clean Freak</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_na_klama.html">Ikanaide</a></li>
     </ul>
   </li>
   <li><h3>des partitions</h3>
@@ -95,6 +104,7 @@ h2 {
     <li class="xadni"><a href="zgiple/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte,_pipno_je_sanga-jazzermazzer99_x_melop-4boxvo.mscz">Un histoire de six billions d'années et une nuit, paroles en lojban</a></li>
     <li class="xadni"><a href="zgiple/wave,_lyrics_jb_x_piano.mscz">Wave, avec des paroles en lojban <span class="toi">⦅note, c'est un vieux arrangement, voyer la section précédente pour une meilleur traduction⦆</span></a></li>
     <li class="xadni"><a href="zgiple/wave,_lyrics_jp_x_piano.mscz">Wave, avec les paroles en romaji</a></li>
+    </ul>
     </ul>
   </li>
   <li><h3>des opinions</h3>
