--- a/boxyfanva/jb_glide.html
+++ b/boxyfanva/jb_glide.html
@@ -118,7 +118,7 @@
 <td>大人の事情抜きで
 </td><td>otona no jijou nuki de
 </td><td>Without covering them up with social pretext
-</td><td>cau lo du gairga'i fi lo jikmu'i ⟦x1 covers x2 with x4 resulting x3⟧
+</td><td>cau lo du gairga'i fi lo jikmu'i <!--⟦x1 covers x2 with x3 resulting x4⟧-->
 </td></tr>
 <tr>
 <td>甘い涙流せば
@@ -148,7 +148,7 @@
 <tr>
 <td>全てが嘘になる
 </td><td>subete ga uso ni naru
-</td><td>Everything will become a xxx (lie)
+</td><td>Everything will become a lie
 </td><td>.i ro da ba binxo lo tcica
 </td></tr>
 <tr>
@@ -212,7 +212,7 @@
 <td><i><b>日本語</b></i>
 </td><td><i><b>Romaji</b></i>
 </td><td><i><b><a href="http://vocaloidlyrics.wikia.com/wiki/%E3%82%B0%E3%83%A9%E3%82%A4%E3%83%89_(Glide)">English</a></b></i>
-</td><td><i><b>fanva fa la melop fi lo jbobau fo lo ponbau jo'u lo glibau</b></i>
+</td><td><i><b>fanva fa la melop fi lo jbobau fo lo ponbau toku'iki'e lo glibautoi</b></i>
 </td><td>
 </td></tr>
 </table>
