--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ h2 {
 <div class="bangu">
   <p><span class="toi">jo'au la jbobau&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> .i fi'i la .melop. kibypapri .i lo fe'e ca facki zo'u tu'e</p>
   <ul>
-  <li><h3 class="sriler">jo'i pi'a lo fanva be fi lo jbobau</h3>
+  <li><h3 class="sriler">jo'i pi'a lo fanva be fi lo jbobau te'u</h3>
     <ul>
     <li class="xadni"><a href="boxyfanva/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte.html">lisri za'ai xa terto nanca je pa nicte</a></li>
     <li class="xadni"><a href="boxyfanva/jb_dikca_angeli.html">dikca angeli</a></li>
@@ -62,14 +62,14 @@ h2 {
     <li class="xadni"><a href="boxyfanva/jb_na_klama.html">na klama</a></li>
     </ul>
   </li>
-  <li><h3 class="sriler">jo'i pi'a lo zgiple</h3>
+  <li><h3 class="sriler">jo'i pi'a lo zgiple te'u</h3>
     <ul>
     <li class="xadni"><a href="zgiple/jb_lisri_zahai_xa_terto_nanca_je_pa_nicte,_pipno_je_sanga-jazzermazzer99_x_melop-4boxvo.mscz">la lisri za'ai xa terto nanca je pa nicte to seka'ai lo lojban sagypemci toi</a></li>
     <li class="xadni"><a href="zgiple/wave,_lyrics_jb_x_piano.mscz">Wave, noi kansa lo sagypemci bau lo jbobau <span class="toi">⦅to o'i ti laldo nunmapti .i viska lo li'erpau mu'i lo xauzma fanva toi⦆</span></a></li>
     <li class="xadni"><a href="zgiple/wave,_lyrics_jp_x_piano.mscz">Wave, noi kansa lo sagypemci bau la .romaji.</a></li>
     </ul>
   </li>
-  <li><h3 class="sriler">jo'i pi'a lo selji'i</h3>
+  <li><h3 class="sriler">jo'i pi'a lo selji'i te'u</h3>
     <ul>
     <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">lo troci be lo ka cikre lo se sitsku je lo jbobau vu'o poi cmene</a></li>
     <li class="xadni"><a href="https://www.reddit.com/r/lojban/comments/64f2wb/stidi_lo_vokske_valsi_proposal_for_phonetic_valsi/">lo voi stidi lo vokske valsi</a></li>
@@ -78,7 +78,7 @@ h2 {
   </li>
   </ul>
   <br><br>
-  <p class="toi">tu'e tu'u .i se piksku jo'u se retsku fi la melop la'o <code>melopee7 fe'ecabu gmail denpabu com</code></p>
+  <p class="toi">tu'u .i se piksku jo'u se retsku fi la melop la'o <code>melopee7 fe'ecabu gmail denpabu com</code></p>
 </div>
 
 <hr>
