--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ h2 {
     <li class="xadni"><a href="boxyfanva/jb_ai_na_djuno.html">I don't wanna know</a></li>
     <li class="xadni"><a href="boxyfanva/jb_jinsa_xalnifa.html">Clean Freak</a></li>
     <li class="xadni"><a href="boxyfanva/jb_na_klama.html">Ikanaide</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_mokca_zei_ai.html">Setsuna Drive</a></li>
     </ul>
   </li>
   <li><h3>some music sheets</h3>
@@ -60,6 +61,7 @@ h2 {
     <li class="xadni"><a href="boxyfanva/jb_ai_na_djuno.html">ai na djuno</a></li>
     <li class="xadni"><a href="boxyfanva/jb_jinsa_xalnifa.html">jinsa xalnifa</a></li>
     <li class="xadni"><a href="boxyfanva/jb_na_klama.html">na klama</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_mokca_zei_ai.html">mokca zei ai</a></li>
     </ul>
   </li>
   <li><h3 class="sriler">jo'i pi'a lo zgiple te'u</h3>
@@ -97,6 +99,7 @@ h2 {
     <li class="xadni"><a href="boxyfanva/jb_ai_na_djuno.html">I don't wanna know</a></li>
     <li class="xadni"><a href="boxyfanva/jb_jinsa_xalnifa.html">Clean Freak</a></li>
     <li class="xadni"><a href="boxyfanva/jb_na_klama.html">Ikanaide</a></li>
+    <li class="xadni"><a href="boxyfanva/jb_mokca_zei_ai.html">Setsuna Drive</a></li>
     </ul>
   </li>
   <li><h3>des partitions</h3>
