--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ h2 {
   </li>
   <li><h3>some opinions</h3>
     <ul>
-    <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">An attempt to fix lojban's quotations and names</a></li>
+    <li class="xadni"><a href="./papri/melopee-quotations_and_names_in_lojban,_an attempt.html">An attempt to fix lojban's quotations and names</a></li>
     <li class="xadni"><a href="https://www.reddit.com/r/lojban/comments/64f2wb/stidi_lo_vokske_valsi_proposal_for_phonetic_valsi/">A proposition for phonetic valsi</a></li>
-    <li class="xadni"><a href="degvelsku.html">Degvelsku, a finger-talk transcription of latin alphabet</a></li>
+    <li class="xadni"><a href="./papri/degvelsku.html">Degvelsku, a finger-talk transcription of latin alphabet</a></li>
     </ul>
   </li>
   </ul>
@@ -73,9 +73,9 @@ h2 {
   </li>
   <li><h3 class="sriler">jo'i pi'a lo selji'i te'u</h3>
     <ul>
-    <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">lo troci be lo ka cikre lo se sitsku je lo jbobau vu'o poi cmene</a></li>
+    <li class="xadni"><a href="./melopee-quotations_and_names_in_lojban,_an attempt.html">lo troci be lo ka cikre lo se sitsku je lo jbobau vu'o poi cmene</a></li>
     <li class="xadni"><a href="https://www.reddit.com/r/lojban/comments/64f2wb/stidi_lo_vokske_valsi_proposal_for_phonetic_valsi/">lo voi stidi lo vokske valsi</a></li>
-    <li class="xadni"><a href="degvelsku.html">la .degvelsku. noi fanva morna lo xanta'a be fo lo latmo selyle'u</a></li>
+    <li class="xadni"><a href="./papri/degvelsku.html">la .degvelsku. noi fanva morna lo xanta'a be fo lo latmo selyle'u</a></li>
     </ul>
   </li>
   </ul>
@@ -112,9 +112,9 @@ h2 {
   </li>
   <li><h3>des opinions</h3>
     <ul>
-    <li class="xadni"><a href="melopee-quotations_and_names_in_lojban,_an attempt.html">Une tentative d'améliorations de noms et citations lojbaniques</a></li>
+    <li class="xadni"><a href="./papri/melopee-quotations_and_names_in_lojban,_an attempt.html">Une tentative d'améliorations de noms et citations lojbaniques</a></li>
     <li class="xadni"><a href="https://www.reddit.com/r/lojban/comments/64f2wb/stidi_lo_vokske_valsi_proposal_for_phonetic_valsi/">Une proposition pour les valsi phonétiques</a></li>
-    <li class="xadni"><a href="degvelsku.html">Degvelsku, une transcription tactile de l'alphabet latin</a></li>
+    <li class="xadni"><a href="./papri/degvelsku.html">Degvelsku, une transcription tactile de l'alphabet latin</a></li>
     </ul>
   </li>
   </ul>
